page content no longer cut off without line breaks at end

--- a/autoscheduler/frontend/src/components/App/App.css
+++ b/autoscheduler/frontend/src/components/App/App.css
@@ -14,3 +14,7 @@
     display: flex;
     flex-direction: column;
 }
+
+.scroll {
+    overflow: auto;
+}
