--- a/autoscheduler/frontend/src/components/InfoPage/InfoPage.css
+++ b/autoscheduler/frontend/src/components/InfoPage/InfoPage.css
@@ -1,10 +1,5 @@
-.PageContent {
-    overflow: auto;
-}
-
 .paper {
     max-width: 800px;
-    display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
